<resources>
    <string name="app_name">Register</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_last_name">Apellido</string>
    <string name="hint_number">Teléfono</string>
    <string name="hint_address">Dirección</string>
    <string name="hint_description">Comentarios</string>
    <string name="help_required">Obligatorio</string>
    <string name="label_register">Registros</string>
    <string name="label_name">"Nombre"</string>
    <string name="label_last_name">Apellido</string>
    <string name="label_phone">Teléfono</string>
    <string name="label_address">Dirección</string>
    <string name="label_description">Comentario</string>
    <string name="validation_field_required">Campo requerido</string>
    <string name="message_write_db_error">Error al modificar la BD</string>
    <string name="message_write_db_success">Operación exitosa</string>
    <string name="registro_title">Registros</string>
    <string name="dialog_title">¿Eliminar Registro?</string>
    <string name="dialog_ok">Eliminar</string>
    <string name="dialog_cancel">Cancelar</string>
</resources>