<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/margin_normal_size"
    android:layout_margin="@dimen/margin_min_size"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="@dimen/corner_radius_middle"
    android:elevation="@dimen/margin_max_size"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@color/gray_700">


        <ImageView
            android:id="@+id/ivContact"
            android:layout_width="@dimen/margin_max_size"
            android:layout_height="@dimen/layout_large"
            android:layout_marginEnd="@dimen/margin_min_size"
            app:srcCompat="@drawable/ic_contacts"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_max_size"
            android:layout_marginTop="@dimen/margin_min_size"
            tools:text="@string/label_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/profile_text_size_large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_max_size"
            android:layout_marginTop="@dimen/margin_min_size"
            tools:text="@string/label_last_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/profile_text_middle"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_max_size"
            android:layout_marginTop="@dimen/margin_min_size"
            tools:text="@string/label_phone"
            android:textColor="@android:color/black"
            android:textSize="@dimen/profile_text_middle"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLastName" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_max_size"
            android:layout_marginTop="12dp"
            tools:text="@string/label_address"
            android:textColor="@android:color/black"
            android:textSize="@dimen/profile_text_middle"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPhone" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_max_size"
            android:layout_marginTop="12dp"
            tools:text="@string/label_description"
            android:textColor="@android:color/black"
            android:textSize="@dimen/profile_text_middle"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAddress" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>


