<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_normal_size"
        android:gravity="center"
        android:layout_marginLeft="@dimen/margin_normal_size"
        android:layout_marginTop="@dimen/margin_normal_size"
        android:layout_marginRight="@dimen/margin_normal_size"
        android:layout_marginBottom="@dimen/margin_min_size">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/profile_image_size_medium"
            android:layout_height="@dimen/profile_image_size_medium">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="@dimen/profile_corner_radius_large"
                app:cardElevation="@dimen/common_padding_default">
                <ImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/ic_launcher"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" />
            </androidx.cardview.widget.CardView>
            <ImageButton
                android:id="@+id/btnSelectPhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_image_search"
                android:background="?selectableItemBackground"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/common_padding_default">

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:helperText="@string/help_required"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/etName"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/hint_name"
                   android:inputType="text"
                   android:maxLength="@integer/description_normal_lenght"
                   android:singleLine="true" />

           </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:helperText="@string/help_required"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/etLastName"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/hint_last_name"
                   android:inputType="text"
                   android:maxLength="@integer/description_normal_lenght"
                   android:singleLine="true" />

           </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:helperText="@string/help_required"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/etPhone"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/hint_number"
                   android:inputType="number"
                   android:maxLength="@integer/number_phone_max_lenght"
                   android:singleLine="true" />

           </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:helperText="@string/help_required"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/etAddress"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/hint_address"
                   android:inputType="text"
                   android:maxLength="@integer/description_normal_2_lenght"
                   android:singleLine="true" />

           </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:counterEnabled="true"
               app:counterMaxLength="@integer/description_max_lenght"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/etDescription"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/hint_description"
                   android:inputType="textMultiLine"
                   android:gravity="top"
                   android:lines="@integer/size_line_normal"
                   android:maxLines="@integer/size_line_max"
                   android:minLines="@integer/size_line_min"
                   android:maxLength="@integer/description_max_lenght"
                   android:singleLine="true"
                   android:scrollbars="vertical"/>

           </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_max_size">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:background="@color/green_700">

            <ImageButton
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_min_size"
                android:layout_marginStart="@dimen/common_padding_default"
                android:layout_marginBottom="@dimen/margin_max_size"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_person"
                app:tint="@color/white"
                tools:ignore="ContentDescription"/>
        </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


    </LinearLayout>
</ScrollView>